--- a/languages.toml
+++ b/languages.toml
@@ -1786,9 +1786,20 @@ source = { git = "https://github.com/vito/tree-sitter-bass", rev = "501133e260d7
 name = "wat"
 scope = "source.webassembly"
 comment-token = ";;"
-file-types = ["wast", "wat"]
+file-types = ["wat"]
 roots = []
 
 [[grammar]]
 name = "wat"
 source = { git = "https://github.com/wasm-lsp/tree-sitter-wasm", rev = "2ca28a9f9d709847bf7a3de0942a84e912f59088", subpath = "wat" }
+
+[[language]]
+name = "wast"
+scope = "source.webassembly"
+comment-token = ";;"
+file-types = ["wast"]
+roots = []
+
+[[grammar]]
+name = "wast"
+source = { git = "https://github.com/wasm-lsp/tree-sitter-wasm", rev = "2ca28a9f9d709847bf7a3de0942a84e912f59088", subpath = "wast" }
