--- a/runtime/themes/dark_plus.toml
+++ b/runtime/themes/dark_plus.toml
@@ -92,8 +92,8 @@
 "info" = { fg = "light_blue" }
 "hint" = { fg = "light_gray3" }
 
-"diagnostic.error" = {underline = "red", modifiers = ["undercurled"] }
-"diagnostic" = {underline = "gold", modifiers = ["undercurled"] }
+"diagnostic.error" = {underline_color = "red", underline_style = "curl"}
+"diagnostic" = {underline_color = "gold", underline_style = "curl" }
 
 [palette]
 white = "#ffffff"
