--- a/runtime/themes/onedarker.toml
+++ b/runtime/themes/onedarker.toml
@@ -2,7 +2,7 @@
 
 "attribute" = { fg = "yellow" }
 "comment" = { fg = "light-gray", modifiers = ["italic"] }
-"constant" = { fg = "green" }
+"constant" = { fg = "gold" }
 "constant.numeric" = { fg = "gold" }
 "constant.builtin" = { fg = "gold" }
 "constant.character.escape" = { fg = "gold" }
