--- a/runtime/themes/ayu_light.toml
+++ b/runtime/themes/ayu_light.toml
@@ -34,23 +34,23 @@
 
 # Interface
 "ui.background"= { bg = "background" }
-"ui.cursor" = { bg = "yellow", fg = "dark_gray" }
+"ui.cursor" = { bg = "yellow", fg = "light_gray" }
 "ui.cursor.match" = { fg = "orange" }
-"ui.linenr" = { fg = "dark_gray" }
+"ui.linenr" = { fg = "light_gray" }
 "ui.linenr.selected" = { fg = "orange" }
 "ui.cursorline" = { bg = "black" }
 "ui.statusline" = { fg = "foreground", bg = "black" }
 "ui.popup" = { bg = "black" }
-"ui.window" = { fg = "dark_gray" }
+"ui.window" = { fg = "light_gray" }
 "ui.help" = { fg  = "foreground", bg = "black" }
 "ui.text" = { fg = "foreground" }
-"ui.text.focus" = { bg = "dark_gray", fg = "foreground" }
+"ui.text.focus" = { bg = "light_gray", fg = "foreground" }
 "ui.text.info" = { fg = "foreground" }
-"ui.virtual.whitespace" = { fg = "dark_gray" }
+"ui.virtual.whitespace" = { fg = "light_gray" }
 "ui.virtual.ruler" = { bg = "black" }
 "ui.menu" = { fg = "foreground", bg = "black" }
 "ui.menu.selected" = { bg = "orange", fg = "background" }
-"ui.selection" = { bg = "dark_gray" }
+"ui.selection" = { bg = "light_gray" }
 "warning" = { fg = "yellow" }
 "error" = { fg = "red", modifiers = ["bold"] }
 "info" = { fg = "blue", modifiers = ["bold"] }
@@ -71,7 +71,7 @@ foreground = "#5c6166"
 black = "#e7eaed"
 blue = "#399ee6"
 cyan = "#478acc"
-dark_gray = "#e7eaed"
+light_gray = "#e7eaed"
 gray = "#787b8099"
 green = "#86b300"
 magenta = "#a37acc"
