--- a/helix-view/Cargo.toml
+++ b/helix-view/Cargo.toml
@@ -22,6 +22,7 @@ helix-lsp = { version = "0.6", path = "../helix-lsp" }
 helix-dap = { version = "0.6", path = "../helix-dap" }
 helix-spell = { version = "0.6", path = "../helix-spell" }
 crossterm = { version = "0.25", optional = true }
+regex = "1"
 
 # Conversion traits
 once_cell = "1.15"
