--- a/runtime/themes/heisenberg.toml
+++ b/runtime/themes/heisenberg.toml
@@ -22,14 +22,14 @@
 "namespace" = { fg = "hazmat_yellow" }
 "markup.heading" = { fg = "hazmat_yellow" }
 "markup.list" = { fg = "vapor_yellow" }
-"markup.raw.block" = { bg = "gray", fg = "orange" }
+"markup.raw.block" = { bg = "background", fg = "orange" }
 "markup.link.url" = { fg = "crystal_blue" }
 "markup.link.text" = { fg = "vapor_yellow" }
 "markup.link.label" = { fg = "barium_green" }
 "markup.quote" = { fg = "vapor_yellow" }
 "diff.plus" = { fg = "cash_green" }
 "diff.minus" = { fg = "chili_powder_red" }
-"diff.delta" = { fg = "cash_green" }
+"diff.delta" = { fg = "orange" }
 
 # Interface
 "ui.background" = { bg = "background" }
@@ -37,19 +37,23 @@
 "ui.cursor.match" = { fg = "hazmat_yellow" }
 "ui.linenr" = { fg = "crystal_blue" }
 "ui.linenr.selected" = { fg = "barium_green" }
-"ui.statusline" = { fg = "crystal_blue", bg = "black" } 
-"ui.cursorline" = { bg = "041B0E" }
+"ui.statusline" = { fg = "crystal_blue", bg = "black" }
+"ui.statusline.normal" = { fg = "crystal_blue", bg = "black" }
+"ui.statusline.insert" = { fg = "barium_green", bg = "black"} 
+"ui.statusline.select" = { fg = "hazmat_yellow", bg = "black" }
+"ui.cursorline.primary" = { bg = "#041B0E" }
 "ui.popup" = { fg = "crystal_blue", bg = "background" }
 "ui.window" = { fg = "barium_green" }
 "ui.help" = { fg = "crystal_blue", bg = "background"}
 "ui.text" = { fg = "crystal_blue" }
 "ui.text.focus" = { bg = "background", fg = "barium_green" }
 "ui.text.info" = { fg = "crystal_blue" }
-"ui.virtual.whitespace" = { fg = "dark_gray" }
+"ui.virtual.whitespace" = { fg = "teddy_bear_pink" }
 "ui.virtual.ruler" = { bg = "#041B0E" }
+"ui.virtual.indent-guide" = { fg = "#08341B" }
 "ui.menu" = { fg = "crystal_blue", bg = "background" }
 "ui.menu.selected" = { bg = "hazmat_yellow", fg = "background" }
-"ui.selection" = { bg = "dark_gray" }
+"ui.selection" = { bg = "desert_maroon" }
 "warning" = { fg = "vapor_yellow" }
 "error" = { fg = "chili_powder_red", modifiers = ["bold"] }
 "info" = { fg = "crystal_blue", modifiers = ["bold"] }
@@ -77,4 +81,5 @@ teddy_bear_pink = "#bd5173"
 crystal_blue = "#32c9fa"
 cash_green = "#00ff80"
 element_green = "#186800"
+desert_maroon = "#2B0C02"
 chili_powder_red = "#c32101"
